footer alignment fixed

--- a/style/style.css
+++ b/style/style.css
@@ -307,6 +307,7 @@ main{
 footer{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 32px 150px 32px 150px;
   border-radius: 16px;
   background: rgba(13, 19, 33, 0.03);
